--- a/Aiwe/Aiwe.csproj
+++ b/Aiwe/Aiwe.csproj
@@ -248,6 +248,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\LiveDropDownResultExtension.cs" />
     <Compile Include="Helpers\AiweCheckerHelper.cs" />
     <Compile Include="Helpers\AiweQueryHelper.cs" />
     <Compile Include="Helpers\AiweTranslationHelper.cs" />
@@ -265,7 +266,6 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Helpers\AiweDropDownHelper.cs" />
     <Compile Include="Migrations\201703200751588_InitialCreate.cs" />
     <Compile Include="Migrations\201703200751588_InitialCreate.Designer.cs">
       <DependentUpon>201703200751588_InitialCreate.cs</DependentUpon>
@@ -285,11 +285,9 @@
     <Compile Include="Helpers\AiweDataFilterHelper.cs" />
     <Compile Include="Helpers\AiweFileHelper.cs" />
     <Compile Include="Helpers\AiweViewHelper.cs" />
-    <Compile Include="Models\ScTableInfo.cs" />
     <Compile Include="Models\CreateEditInfo.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BaseTableInfo.cs" />
-    <Compile Include="Models\ColumnInfo.cs" />
     <Compile Include="Models\DB\CoreAccessLog.cs" />
     <Compile Include="Models\DB\CoreActionLog.cs" />
     <Compile Include="Models\DB\CoreErrorLog.cs" />
@@ -297,7 +295,6 @@
     <Compile Include="Models\DB\MetaItem.cs" />
     <Compile Include="Models\DB\Partials\PartialMetaItem.cs" />
     <Compile Include="Models\DetailsInfo.cs" />
-    <Compile Include="Models\LiveDropDownResult.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\ViewModels\ApplicationUserCreateViewModel.cs" />
@@ -307,7 +304,6 @@
     <Compile Include="Models\FilterIndexInfo.cs" />
     <Compile Include="Models\Filters\ApplicationUserFilter.cs" />
     <Compile Include="Models\Filters\TeamFilter.cs" />
-    <Compile Include="Models\ListColumnResult.cs" />
     <Compile Include="Extensions\ListColumnInfoExtension.cs" />
     <Compile Include="Helpers\AiweUserHelper.cs" />
     <Compile Include="Models\API\ApiRequestResult.cs" />
