--- a/Aiwe/Aiwe.csproj
+++ b/Aiwe/Aiwe.csproj
@@ -285,23 +285,23 @@
     <Compile Include="Helpers\AiweDataFilterHelper.cs" />
     <Compile Include="Helpers\AiweFileHelper.cs" />
     <Compile Include="Helpers\AiweViewHelper.cs" />
-    <Compile Include="Models\CreateEditInfo.cs" />
-    <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\BaseTableInfo.cs" />
+    <Compile Include="Models\AiweCreateEditModel.cs" />
+    <Compile Include="Models\MVC\AccountViewModels.cs" />
+    <Compile Include="Models\AiweBaseTableModel.cs" />
     <Compile Include="Models\DB\CoreAccessLog.cs" />
     <Compile Include="Models\DB\CoreActionLog.cs" />
     <Compile Include="Models\DB\CoreErrorLog.cs" />
     <Compile Include="Models\DB\CoreUserMap.cs" />
     <Compile Include="Models\DB\MetaItem.cs" />
     <Compile Include="Models\DB\Partials\PartialMetaItem.cs" />
-    <Compile Include="Models\DetailsInfo.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\AiweDetailsModel.cs" />
+    <Compile Include="Models\MVC\IdentityModels.cs" />
+    <Compile Include="Models\MVC\ManageViewModels.cs" />
     <Compile Include="Models\ViewModels\ApplicationUserCreateViewModel.cs" />
     <Compile Include="Models\ViewModels\ApplicationUserEditViewModel.cs" />
     <Compile Include="Models\ViewModels\ApplicationUserViewModel.cs" />
     <Compile Include="Models\ViewModels\RoleViewModel.cs" />
-    <Compile Include="Models\FilterIndexInfo.cs" />
+    <Compile Include="Models\AiweFilterIndexModel.cs" />
     <Compile Include="Models\Filters\ApplicationUserFilter.cs" />
     <Compile Include="Models\Filters\TeamFilter.cs" />
     <Compile Include="Extensions\ListColumnInfoExtension.cs" />
