--- a/Aiwe/bin/Aiwe.dll.config
+++ b/Aiwe/bin/Aiwe.dll.config
@@ -9,6 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
+    <!--<add name="DefaultConnection" connectionString="Data Source=DESKTOP-U53LVFU;initial catalog=FriscoMMSUsers;integrated security=True;MultipleActiveResultSets=False;App=EntityFramework" providerName="System.Data.SqlClient"/>
+    <add name="CoreDataModel" connectionString="Data source=DESKTOP-U53LVFU;initial catalog=FriscoMMS;integrated security=True;MultipleActiveResultSets=False;App=EntityFramework" providerName="System.Data.SqlClient"/>-->
     <add name="DefaultConnection" connectionString="Data Source=DESKTOP-U53LVFU;initial catalog=aiweUsers;integrated security=False;User Id=test;Password=Question123;MultipleActiveResultSets=False;App=EntityFramework" providerName="System.Data.SqlClient"/>
     <add name="CoreDataModel" connectionString="Data source=DESKTOP-U53LVFU;initial catalog=aiwe;integrated security=False;User Id=test;Password=Question123;MultipleActiveResultSets=False;App=EntityFramework" providerName="System.Data.SqlClient"/>
     <!--<add name="DefaultConnection1" connectionString="Data Source=ASTRIOS2\ASTRIOSQLSERVER;initial catalog=mmsdbUsers;integrated security=False;User Id=test;Password=Question123;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
