--- a/Aiwe/bin/Aiwe.dll.config
+++ b/Aiwe/bin/Aiwe.dll.config
@@ -9,10 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <!--<add name="DefaultConnection" connectionString="Data Source=DESKTOP-U53LVFU;initial catalog=aiweUsers;integrated security=False;User Id=test;Password=Question123;MultipleActiveResultSets=False;App=EntityFramework" providerName="System.Data.SqlClient"/>
-    <add name="CoreDataModel" connectionString="Data source=DESKTOP-U53LVFU;initial catalog=aiwe;integrated security=False;User Id=test;Password=Question123;MultipleActiveResultSets=False;App=EntityFramework" providerName="System.Data.SqlClient"/>-->
-    <add name="CoreDataModel" connectionString="Data Source=DESKTOP-U53LVFU;Initial Catalog=IndoMotorDb;Integrated Security=True" providerName="System.Data.SqlClient"/>
-    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-U53LVFU;Initial Catalog=IndoMotorDbUsers;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-U53LVFU;initial catalog=aiweUsers;integrated security=False;User Id=test;Password=Question123;MultipleActiveResultSets=False;App=EntityFramework" providerName="System.Data.SqlClient"/>
+    <add name="CoreDataModel" connectionString="Data source=DESKTOP-U53LVFU;initial catalog=aiwe;integrated security=False;User Id=test;Password=Question123;MultipleActiveResultSets=False;App=EntityFramework" providerName="System.Data.SqlClient"/>
+    <!--<add name="CoreDataModel" connectionString="Data Source=DESKTOP-U53LVFU;Initial Catalog=IndoMotorDb;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-U53LVFU;Initial Catalog=IndoMotorDbUsers;Integrated Security=True" providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
